2010-02-24  Werner Koch  <wk@g10code.com>

	* tests/ce-server.c: New.

	* tests/ce-createpipe.c [W32CE]: New.

2010-02-11  Werner Koch  <wk@g10code.com>

	* configure.ac (inet_pton): Check for it.

2010-02-04  Werner Koch  <wk@g10code.com>

	* configure.ac (AC_TYPE_UINT16_T): New.

2010-01-27  Werner Koch  <wk@g10code.com>

	* tests/common.h (SOCKET2HANDLE, HANDLE2SOCKET): New.

2010-01-26  Werner Koch  <wk@g10code.com>

	* configure.ac (NETLIBS) [W32CE]: Use -lws2.

2010-01-22  Werner Koch  <wk@g10code.com>

	* configure.ac: Require libgpg-error 1.8.
	(HAVE_W32CE_SYSTEM): New am_defines and am_conditionals.
	* ltmain.sh (wrappers_required): Don't set for mingw32ce.
	* autogen.sh: Add option --build-w32ce.  Remove --disable-shared
	from --build-w32.

2010-01-08  Marcus Brinkmann  <marcus@g10code.de>

	Released 2.0.0.

2010-01-05  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac (_DARWIN_C_SOURCE): Define on frapple.

2009-12-22  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Do not use echo -n.

2009-12-15  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Bump version to 2.0.0.

2009-11-05  Marcus Brinkmann  <marcus@g10code.de>

	* tests/fdpassing.c (main): Call assuan_pipe_connect instead
	of assuan_pipe_connect_ext.

2009-11-04  Werner Koch  <wk@g10code.com>

	* tests/fdpassing.c (register_commands): Add NULL arg to
	assuan_register_command.

2009-10-16  Marcus Brinkmann  <marcus@g10code.de>

	* autogen.sh: Remove --with-pth-prefix from configure invocation.
	* configure.ac (_ASSUAN_IN_LIBASSUAN, PTH_SYSCALL_SOFT): Do not
	set anymore.
	(GNUPG_PATH_PTH): Don't invoke.
	(HAVE_PTH): Remove conditional.
	(LIBASSUAN_CONFIG_THREAD_MODULES): Removed.

2009-10-08  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: AC_REPLACE_FUNCS for vasprintf.

2009-09-19  Marcus Brinkmann  <marcus@g10code.de>

	* tests/fdpassing.c: Update to new API.
	* configure.ac: Check for stdint.h and inttypes.h.  Invoke
	AC_TYPE_UINTPTR_T.
